adjusting or reconsidering